@@ -147,9 +147,26 @@ name|apache
 operator|.
 name|hadoop
 operator|.
-name|ipc
+name|hdfs
 operator|.
-name|RemoteException
+name|DistributedFileSystem
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|protocol
+operator|.
+name|HdfsConstants
+operator|.
+name|SafeModeAction
 import|;
 end_import
 begin_import
@@ -401,11 +418,65 @@ argument_list|,
 name|configuration
 argument_list|)
 expr_stmt|;
-while|while
+if|if
 condition|(
-literal|true
+name|fileSystem
+operator|instanceof
+name|DistributedFileSystem
 condition|)
 block|{
+comment|// Make sure dfs is not in safe mode
+while|while
+condition|(
+operator|(
+operator|(
+name|DistributedFileSystem
+operator|)
+name|fileSystem
+operator|)
+operator|.
+name|setSafeMode
+argument_list|(
+name|SafeModeAction
+operator|.
+name|SAFEMODE_GET
+argument_list|,
+literal|true
+argument_list|)
+condition|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"The NameNode is in SafeMode - Solr will wait 5 seconds and try again."
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|5000
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+name|Thread
+operator|.
+name|interrupted
+argument_list|()
+expr_stmt|;
+comment|// continue
+block|}
+block|}
+block|}
 try|try
 block|{
 if|if
@@ -446,97 +517,6 @@ argument_list|)
 throw|;
 block|}
 block|}
-else|else
-block|{
-name|fileSystem
-operator|.
-name|mkdirs
-argument_list|(
-name|hdfsDirPath
-argument_list|)
-expr_stmt|;
-comment|// check for safe mode
-block|}
-break|break;
-block|}
-catch|catch
-parameter_list|(
-name|RemoteException
-name|e
-parameter_list|)
-block|{
-if|if
-condition|(
-name|e
-operator|.
-name|getClassName
-argument_list|()
-operator|.
-name|equals
-argument_list|(
-literal|"org.apache.hadoop.hdfs.server.namenode.SafeModeException"
-argument_list|)
-condition|)
-block|{
-name|LOG
-operator|.
-name|warn
-argument_list|(
-literal|"The NameNode is in SafeMode - Solr will wait 5 seconds and try again."
-argument_list|)
-expr_stmt|;
-try|try
-block|{
-name|Thread
-operator|.
-name|sleep
-argument_list|(
-literal|5000
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|InterruptedException
-name|e1
-parameter_list|)
-block|{
-name|Thread
-operator|.
-name|interrupted
-argument_list|()
-expr_stmt|;
-block|}
-continue|continue;
-block|}
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|common
-operator|.
-name|util
-operator|.
-name|IOUtils
-operator|.
-name|closeQuietly
-argument_list|(
-name|fileSystem
-argument_list|)
-expr_stmt|;
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-literal|"Problem creating directory: "
-operator|+
-name|hdfsDirPath
-argument_list|,
-name|e
-argument_list|)
-throw|;
 block|}
 catch|catch
 parameter_list|(
@@ -572,7 +552,6 @@ argument_list|,
 name|e
 argument_list|)
 throw|;
-block|}
 block|}
 block|}
 annotation|@
